deploy/gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mtg-market.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 8080
